RESOLVED FIXED151795
FTL::OSRExitDescriptor should use less memory by having a companion object that dies after compilation
https://bugs.webkit.org/show_bug.cgi?id=151795
Summary FTL::OSRExitDescriptor should use less memory by having a companion object th...
Saam Barati
Reported 2015-12-02 23:22:54 PST
We only use the field while compiling so there is no need for it to live forever.
Attachments
patch (25.70 KB, patch)
2015-12-03 01:29 PST, Saam Barati
ggaren: review+
Saam Barati
Comment 1 2015-12-03 01:29:35 PST
WebKit Commit Bot
Comment 2 2015-12-03 01:31:39 PST
Attachment 266521 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/ftl/FTLOSRExitCompilationInfo.h:33: Alphabetical sorting problem. [build/include_order] [4] ERROR: Source/JavaScriptCore/ftl/FTLOSRExit.cpp:47: Wrong number of spaces before statement. (expected: 8) [whitespace/indent] [4] Total errors found: 2 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3 2015-12-03 11:53:21 PST
Comment on attachment 266521 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=266521&action=review r=me > Source/JavaScriptCore/ftl/FTLCompile.cpp:485 > + HashMap<OSRExitDescriptor*, OSRExitDescriptorCompilationInfo*> genericUnwindOSRExitDescriptors; Can we call this OSRExitDescriptorImpl? This seems to be the impl pattern, where most of the implementation of the object is in another object.
Saam Barati
Comment 4 2015-12-03 12:00:46 PST
(In reply to comment #3) > Comment on attachment 266521 [details] > patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=266521&action=review > > r=me > > > Source/JavaScriptCore/ftl/FTLCompile.cpp:485 > > + HashMap<OSRExitDescriptor*, OSRExitDescriptorCompilationInfo*> genericUnwindOSRExitDescriptors; > > Can we call this OSRExitDescriptorImpl? This seems to be the impl pattern, > where most of the implementation of the object is in another object. Sounds good to me.
Saam Barati
Comment 5 2015-12-03 13:10:22 PST
Note You need to log in before you can comment on or make changes to this bug.